@@ -38,6 +38,7 @@ import org.xmlobjects.gml.model.geometry.Envelope;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ChunkWriter {
 
@@ -60,7 +61,7 @@ public class ChunkWriter {
                     .map(AbstractCityObjectProperty::getObject)
                     .filter(Tunnel.class::isInstance)
                     .map(Tunnel.class::cast)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         CityGMLVersion version = CityGMLVersion.v3_0;
